# Reqmira

./: .gitignore  CHANGELOG.md  README.md  apilens-dev-spec.html  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/: 使用教學.md  測試報告.md
scripts/: extract-changelog.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: analyze.rs  collection.rs  env.rs  flow.rs  mod.rs  request.rs  workspace.rs
src-tauri/src/services/: deep_diff.rs  file_store.rs  mod.rs  request_runner.rs  variable_resolver.rs
src/app/: styles.css
src/features/collections/: CollectionTree.vue
src/features/environments/: EnvironmentEditor.vue
src/features/inspector/: RequestInspector.vue
src/features/palette/: CommandPalette.vue
src/features/requests/: ImportCurl.vue  ImportSpec.vue  RequestEditor.vue  RequestSnippet.vue
src/features/response-viewer/: ResponseViewer.vue
src/features/runner/: FlowRunner.vue
src/shared/: analyze.ts  api.ts  collectionActions.ts  contextMenu.ts  curl.ts  dialog.ts  generators.ts  importers.ts  jsonpath.ts  snippets.ts  toast.ts  treeState.ts  types.ts
src/shared/__tests__/: analyze.test.ts  curl.test.ts  generators.test.ts  importers.test.ts  jsonpath.test.ts  snippets.test.ts
workspace/: reqmira.json
workspace/collections/: new-request.api.yaml  新請求.api.yaml
workspace/environments/: demo.yaml  dev.yaml  local.yaml
workspace/flows/: demo-httpbin.flow.yaml  login-and-query.flow.yaml
(+22 files in other folders)
